--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,7 +1,14 @@
-$cl-white:		#FFFFFF;
+$cl-white:					#FFFFFF;
 
-$cl-primary:	#2D247F;
-$cl-tertiary:	#256F3F;
+$cl-primary:				#2D247F;
+$cl-tertiary:				#256F3F;
 
-$font-primary: 'Roboto', sans-serif;;
-$font-secondary: 'Work Sans', sans-serif;
+$cl-tag-front:				#FFAC4F;
+$cl-tag-back:					#4735E2;
+$cl-tag-marketing:		#0076FF;
+$cl-tag-consultancy:	#EA4DB2;
+$cl-tag-copywriting:	#E0AAFE;
+$cl-tag-webdesign:		#F0834A;
+
+$font-primary: 			'Roboto', sans-serif;
+$font-secondary:		'Work Sans', sans-serif;
