--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,6 +1,7 @@
 $cl-white:						#FFFFFF;
 
 $cl-primary:					#2D247F;
+$cl-secondary:				#7A69ED;
 $cl-tertiary:					#256F3F;
 
 $cl-tag-front:				#FFAC4F;
