--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,15 +1,16 @@
-$cl-white:						#FFFFFF;
+$cl-white:            #FFFFFF;
+$cl-black:            #000000;
 
-$cl-primary:					#2D247F;
-$cl-secondary:				#7A69ED;
-$cl-tertiary:					#256F3F;
+$cl-primary:          #2D247F;
+$cl-secondary:        #7A69ED;
+$cl-tertiary:         #256F3F;
 
-$cl-tag-front:				#FFAC4F;
-$cl-tag-back:					#4735E2;
-$cl-tag-marketing:		#0076FF;
-$cl-tag-consultancy:	#EA4DB2;
-$cl-tag-copywriting:	#E0AAFE;
-$cl-tag-webdesign:		#F0834A;
+$cl-tag-front:        #FFAC4F;
+$cl-tag-back:         #4735E2;
+$cl-tag-marketing:    #0076FF;
+$cl-tag-consultancy:  #EA4DB2;
+$cl-tag-copywriting:  #E0AAFE;
+$cl-tag-webdesign:    #F0834A;
 
-$font-primary: 			'Roboto', sans-serif;
-$font-secondary:		'Work Sans', sans-serif;
+$font-primary:        'Roboto', sans-serif;
+$font-secondary:      'Work Sans', sans-serif;
