--- a/src/assets/scss/button.scss
+++ b/src/assets/scss/button.scss
@@ -9,6 +9,7 @@
   text-decoration: none;
   border-radius: 2.5rem;
   outline: none;
+  transition: box-shadow 200ms;
   
   svg {
     margin-right: 1rem;
@@ -22,7 +23,6 @@
   border-bottom: .1rem solid #9a5c3c;
   box-shadow: 0 16px 16px 0 rgba(240,131,74,0.15), 0 8px 8px 0 rgba(240,131,74,0.15), 0 4px 4px 0 rgba(240,131,74,0.15), 0 2px 2px 0 rgba(240,131,74,0.15), 0 1px 1px 0 rgba(240,131,74,0.15);
   border-radius: 10rem;
-  transition: box-shadow 200ms;
   
   &:hover,
   &:focus {
@@ -39,7 +39,19 @@
 .button--secondary {
   color: $cl-white;
   background: #0076FF;
+  border-bottom: .1rem solid #004da7;
   box-shadow: 0 1.6rem 1.6rem 0 rgba(0,118,255,0.20), 0 .8rem .8rem 0 rgba(0,118,255,0.20), 0 .4rem .4rem 0 rgba(0,118,255,0.20), 0 .2rem .2rem 0 rgba(0,118,255,0.20), 0 .1rem .1rem 0 rgba(0,118,255,0.20);
+  
+  &:hover,
+  &:focus {
+    cursor: pointer;
+    box-shadow: 0 16px 36px 0 rgba(0,118,255,0.20), 0 8px 18px 0 rgba(0,118,255,0.20), 0 4px 14px 0 rgba(0,118,255,0.20), 0 2px 12px 0 rgba(0,118,255,0.20), 0 1px 11px 0 rgba(0,118,255,0.20);
+  }
+
+  &:active {
+    border-top: .1rem solid #004da7;
+    box-shadow: 0 16px 26px 0 rgba(0,118,255,0.20), 0 8px 8px 0 rgba(0,118,255,0.20), 0 4px 4px 0 rgba(0,118,255,0.20), 0 2px 2px 0 rgba(0,118,255,0.20), 0 1px 1px 0 rgba(0,118,255,0.20);
+  }
 }
 
 .button--tertiary {
@@ -56,4 +68,8 @@
 .button--header {
   text-transform: uppercase;
   box-shadow: 0 .2rem 1rem 0 rgba(black, .4);
+}
+
+.button--ghost {
+	box-shadow: 0 0 0 .2rem $cl-white;
 }
