--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -5,7 +5,7 @@ $cl-primary:          #2D247F;
 $cl-secondary:        #7A69ED;
 $cl-tertiary:         #256F3F;
 
-$cl-tag-front:        #FFAC4F;
+$cl-tag-front:        #8E5ED3;
 $cl-tag-back:         #4735E2;
 $cl-tag-marketing:    #0076FF;
 $cl-tag-consultancy:  #EA4DB2;
