feat(cart): Add rudimentary cart element and functionality

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,9 @@
+@import 'base/functions';
 @import 'base/variables';
 @import 'base/defaults';
 @import 'base/typography';
 
 @import 'components/header';
 @import 'components/section';
+@import 'components/cart';
 @import 'components/member';
