--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -17,7 +17,7 @@ h1 {
   font-family: $font-primary;
   color: $cl-primary;
   font-size: 6rem;
-  margin-bottom: 2.5rem;
+  margin: 0 0 2.5rem;
 }
 
 a {
