--- a/src/scss/components/_member.scss
+++ b/src/scss/components/_member.scss
@@ -1,14 +1,20 @@
 .members {
   display: flex;
   align-items: center;
+  justify-content: center;
+  overflow-x: auto;
+  max-width: 100%;
   margin: 0;
-  padding: 0;
+  padding: 0 0 10rem 0;
   list-style: none;
 }
 
 .member {
   position: relative;
   overflow: hidden;
+  flex-grow: 0;
+  flex-shrink: 0;
+  width: 33.6rem;
   margin: 0 1.5rem;
   padding: 7em 3em 9em;
   font-size: 1rem;
@@ -19,6 +25,7 @@
 
   &:nth-child(1),
   &:nth-child(5) {
+    width: 19rem;
     font-size: .57143rem; // 16px
 
     &:hover {
@@ -29,6 +36,7 @@
 
   &:nth-child(2),
   &:nth-child(4) {
+    width: 25.5rem;
     font-size: .75rem;
 
     &:hover {
