--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,5 +3,10 @@
 @import 'base/typography';
 
 @import 'components/header';
+@import 'components/button';
+@import 'components/banner';
+@import 'components/navigation';
 @import 'components/section';
 @import 'components/member';
+@import 'components/social';
+@import 'components/client';
