feat(footer): Add some styling and layout. fix(typography): Remove top margin from h1. feat(readmore): Add arrow and hover state.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@
 @import 'base/typography';
 
 @import 'components/header';
+@import 'components/footer';
 @import 'components/button';
 @import 'components/banner';
 @import 'components/navigation';
