--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -47,4 +47,22 @@ a {
 
 .readmore {
   color: $cl-secondary;
+
+  &:hover {
+    text-decoration: underline;
+
+    &:after {
+      transform: translate3d(1rem, 0, 0);
+    }
+  }
+
+  &:after {
+    content: '';
+    display: inline-block;
+    width: 1.6rem;
+    height: .8rem;
+    margin-left: 1rem;
+    background-image: url("data:image/svg+xml,%3Csvg width='16' height='8' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.01 3H0v2h12.01v3L16 4l-3.99-4z' fill='%23F0834A' fill-rule='nonzero'/%3E%3C/svg%3E");
+    transition: transform 300ms;
+  }
 }
