feat(header): Add social icons. feat(footer): Add social icons.

--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -28,7 +28,7 @@
 .banner__container {
   z-index: 2;
   position: relative;
-  max-width: 129rem;
+  max-width: $container-max-width;
   margin: 0 auto;
 }
 
