--- a/src/scss/components/_social.scss
+++ b/src/scss/components/_social.scss
@@ -6,10 +6,15 @@
   margin: 0 4rem 0 auto;
 }
 
-.social__item {
+.social--footer {
+  margin: 0 0 0 4rem;
+}
+
+.social-item {
 
 }
 
-.social__anchor {
+.social-item__anchor {
+  margin-left: 1.5rem;
   color: $cl-white;
 }
