--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -33,7 +33,7 @@
 .section__container {
   display: flex;
   width: 100%;
-  max-width: 129rem;
+  max-width: $container-max-width;
   margin: 0 auto;
 }
 
