feat(home): Add some responsiveness.

--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -28,19 +28,36 @@
 .banner__container {
   z-index: 2;
   position: relative;
-  max-width: $container-max-width;
+  width: 100%;
   margin: 0 auto;
+  padding: 0 3rem;
+  text-align: center;
+
+  @include media($screen-md) {
+    max-width: $container-max-width;
+    text-align: left;
+  }
 }
 
 .banner__heading {
-  max-width: 60%;
   color: $cl-white;
   font-size: 8rem;
+
+  @include media($screen-md) {
+    max-width: 60%;
+  }
 }
 
 .banner__content {
-  max-width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   line-height: 1.55;
+
+  @include media($screen-md) {
+    max-width: 60%;
+    align-items: flex-start;
+  }
 
   .button {
     float: left;
