--- a/src/scss/base/_defaults.scss
+++ b/src/scss/base/_defaults.scss
@@ -7,3 +7,9 @@ html {
   margin: 0;
   padding: 0;
 }
+
+@mixin media($min-width) {
+  @media screen and (min-width: $min-width) {
+    @content
+  }
+}
