--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -46,10 +46,14 @@ a {
 }
 
 .readmore {
+  display: inline-block;
+  margin-top: 2rem;
   color: $cl-secondary;
 
-  &:hover {
+  &:hover,
+  &:focus {
     text-decoration: underline;
+    outline: none;
 
     &:after {
       transform: translate3d(1rem, 0, 0);
