--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -19,10 +19,12 @@
   font-weight: 700;
   letter-spacing: .1rem;
   text-shadow: 0 .1rem .4rem darken($cl-primary, 10%);
+  outline: none;
   transition: color 200ms;
 
   &:hover,
   &:focus {
     color: rgba($cl-white, .6);
+    text-decoration: underline;
   }
 }
