fix(form): Add contact form and improve sections.

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -2,6 +2,7 @@ $cl-primary: #4735E2;
 $cl-secondary: #F0834A;
 $cl-tertiary: #0076FF;
 $cl-quaternary: #EA4DB2;
+$cl-quinary: #2D247F;
 
 $cl-body: #444444;
 $cl-warning: #FB7676;
