--- a/src/scss/base/_defaults.scss
+++ b/src/scss/base/_defaults.scss
@@ -8,6 +8,14 @@ html {
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+
+  @media screen and (prefers-reduced-motion: reduce) {
+    scroll-behavior: auto;
+  }
+}
+
 @mixin media($min-width) {
   @media screen and (min-width: $min-width) {
     @content
