--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -28,6 +28,14 @@ a {
   font-family: $font-primary;
 }
 
+@keyframes strike {
+  from {
+    width: 0;
+  } to {
+    width: 100%;
+  }
+}
+
 .strikethrough {
   position: relative;
   display: inline-block;
@@ -35,13 +43,15 @@ a {
   &:after {
     content: '';
     position: absolute;
-    top: 50%;
+    top: 70%;
     left: 0;
     width: 100%;
     height: .6rem;
     background-color: $cl-warning;
     border-radius: .6rem;
     transform: rotate(-10deg);
+    transform-origin: left bottom;
+    animation: strike 700ms both cubic-bezier(0.215, 0.61, 0.355, 1) 300ms;
   }
 }
 
