--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   height: 95vh;
+  min-height: 80rem;
   color: $cl-white;
   background-image: linear-gradient(168deg, #4735E2 40%, #3D3398 100%);
 
