--- a/src/scss/components/_member.scss
+++ b/src/scss/components/_member.scss
@@ -22,12 +22,14 @@
   box-shadow: 0 2rem 3.5rem 0 rgba($cl-black, .12);
   border-radius: .8rem;
   outline: none;
-  transition: transform 300ms;
+  user-select: none;
+  transition: transform 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
 
   &:nth-child(1),
   &:nth-child(5) {
     width: 19rem;
     font-size: .57143rem; // 16px
+    transition-duration: 500ms;
 
     &:hover,
     &:focus,
@@ -73,7 +75,11 @@
 
 .member__description {
   padding-right: 2em;
-  font-size: 1.6em;
+  color: $cl-quinary;
+  font: {
+    size: 1.6em;
+    weight: 300;
+  };
   line-height: 1.43;
 }
 
@@ -90,7 +96,8 @@
   outline: none;
   transition: {
     property: color, box-shadow;
-    duration: 300ms;
+    duration: 400ms;
+    timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
   }
 
   &:hover,
