--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -24,6 +24,8 @@
 .contact {
   position: relative;
   width: 100%;
+  max-width: 90rem;
+  margin: 0 auto;
   padding: 10rem 6rem 7rem;
   background-color: $cl-white;
   border-radius: .2rem;
@@ -36,7 +38,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100rem;
+    height: calc(100% + 100rem);
     background-color: $cl-white;
     box-shadow: 0 -1rem 4rem 0 rgba($cl-black, .15);
     animation: slideUpShadow 1000ms both cubic-bezier(0.215, 0.61, 0.355, 1);
