--- a/src/scss/components/_member.scss
+++ b/src/scss/components/_member.scss
@@ -18,6 +18,7 @@
   margin: 0 1.5rem;
   padding: 7em 3em 9em;
   font-size: 1rem;
+  list-style: none;
   background: $cl-white;
   box-shadow: 0 2rem 3.5rem 0 rgba($cl-black, .12);
   border-radius: .8rem;
@@ -49,6 +50,40 @@
     &:focus-within {
       z-index: 2;
       transform: scale(1.34299);
+    }
+  }
+
+  &::after {
+    content: '';
+    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: .3em solid $cl-tertiary;
+    border-radius: .8rem;
+    opacity: 0;
+    transition: opacity 200ms;
+    pointer-events: none;
+  }
+
+  &.is-selected {
+    &::after {
+      opacity: 1;
+    }
+  }
+
+  &.is-cloned {
+    z-index: 9;
+    position: fixed;
+    box-shadow: none;
+    opacity: .7;
+    backface-visibility: hidden;
+    transition: {
+      duration: 500ms;
+      timing-function: ease-in;
     }
   }
 }
