--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import 'base/defaults';
 @import 'base/typography';
 
+@import 'components/clone';
 @import 'components/header';
 @import 'components/footer';
 @import 'components/button';
