--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -104,7 +104,7 @@
 }
 
 .contact__input {
-  -webkit-appearance: none;
+  appearance: none;
   font-family: inherit;
   font-size: 2rem;
   padding: 0;
@@ -168,7 +168,7 @@
 }
 
 .contact__budget-slider {
-  -webkit-appearance: none;
+  appearance: none;
   display: block;
   width: 100%;
   font-size: 1rem;
@@ -185,7 +185,7 @@
   }
 
   &::-webkit-slider-thumb {
-    -webkit-appearance: none;
+    appearance: none;
     height: 2.4em;
     width: 2.4em;
     border-radius: 50%;
