--- a/src/scss/components/_client.scss
+++ b/src/scss/components/_client.scss
@@ -1,11 +1,3 @@
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  } to {
-    opacity: 1;
-  }
-}
-
 .clients {
   display: flex;
   align-items: center;
@@ -21,13 +13,18 @@
 }
 
 .client {
+  opacity: 0;
   margin: 1rem 3rem;
-  animation: fadeIn 800ms both cubic-bezier(0.215, 0.61, 0.355, 1);
+  transition: opacity 800ms cubic-bezier(0.215, 0.61, 0.355, 1) 300ms;
+
+  .section.is-active & {
+    opacity: 1;
+  }
 
   @for $i from 1 through 6 {
 
     &:nth-child(#{$i}) {
-      animation-delay: 150ms * $i;
+      transition-delay: 150ms * $i;
     }
   }
 
