--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -22,6 +22,7 @@
 }
 
 .contact {
+  opacity: 0;
   position: relative;
   width: 100%;
   max-width: 90rem;
@@ -29,7 +30,11 @@
   padding: 10rem 6rem 7rem;
   background-color: $cl-white;
   border-radius: .2rem;
-  animation: slideUp 1000ms both cubic-bezier(0.215, 0.61, 0.355, 1);
+  transform: scale(.5) translate3d(0, 100%, 0);
+
+  .section.is-active & {
+    animation: slideUp 1000ms both cubic-bezier(.215, .61, .355, 1);
+  }
 
   &:after {
     content: '';
@@ -40,8 +45,11 @@
     width: 100%;
     height: calc(100% + 100rem);
     background-color: $cl-white;
-    box-shadow: 0 -1rem 4rem 0 rgba($cl-black, .15);
-    animation: slideUpShadow 1000ms both cubic-bezier(0.215, 0.61, 0.355, 1);
+    box-shadow: 0 0 .3rem .1rem rgba($cl-black, .3);
+
+    .section.is-active & {
+      animation: slideUpShadow 1000ms both cubic-bezier(.215, .61, .355, 1);
+    }
   }
 
   > * {
@@ -62,7 +70,10 @@
 
 .contact__stamp {
   position: absolute;
-  animation: stamp 300ms both cubic-bezier(0.215, 0.61, 0.355, 1);
+
+  .section.is-active & {
+    animation: stamp 300ms both cubic-bezier(.215, .61, .355, 1);
+  }
 }
 
 .contact__stamp--1 {
@@ -77,20 +88,11 @@
   animation-delay: 1300ms;
 }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  } to {
-    opacity: 1;
-  }
-}
-
 .contact__form {
-  // animation: fadeIn 500ms both 1600ms cubic-bezier(0.215, 0.61, 0.355, 1);
+
 }
 
 .contact__row {
-  // margin-bottom: 2rem;
   line-height: 2em;
   max-width: 70rem;
 }
