--- a/src/scss/components/_member.scss
+++ b/src/scss/components/_member.scss
@@ -23,6 +23,7 @@
   box-shadow: 0 2rem 3.5rem 0 rgba($cl-black, .12);
   border-radius: .8rem;
   outline: none;
+  cursor: pointer;
   user-select: none;
   transition: transform 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
 
@@ -64,7 +65,7 @@
     display: block;
     width: 100%;
     height: 100%;
-    border: .3em solid $cl-tertiary;
+    border: .2em solid $cl-primary;
     border-radius: .8rem;
     opacity: 0;
     transition: opacity 200ms;
@@ -82,10 +83,64 @@
   position: absolute;
   top: 0;
   right: 0;
+  width: 80%;
+
+  &:before {
+    content: '';
+    opacity: 0;
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 80%;
+    height: 100%;
+    background: url('images/add-to-team.svg') no-repeat calc(100% - 2em) 2em/12em;
+    transition: opacity 300ms;
+  }
+
+  &:after {
+    content: '';
+    opacity: 0;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 80%;
+    height: 100%;
+    mask-image: url('images/avatar-mask.svg');
+    mask-repeat: space;
+    mask-size: contain;
+    mask-position: right top;
+    background: rgba($cl-tertiary, .8);
+    transition: opacity 300ms;
+  }
+
+  .member:hover &:before,
+  .member:hover &:after {
+    opacity: 1;
+  }
+
+  .member.is-selected & {
+
+    &:before {
+      opacity: 1;
+      background: url('images/selected-member.svg') no-repeat calc(100% - 2em) 2em/13em;
+    }
+
+    &:after {
+      opacity: 1;
+      background: rgba($cl-primary, .8);
+    }
+  }
 
   img {
-    width: 22.1em;
+    float: right;
+    width: 80%;
     height: auto;
+    mask-image: url('images/avatar-mask.svg');
+    mask-repeat: space;
+    mask-size: contain;
+    mask-position: right top;
   }
 }
 
@@ -113,12 +168,14 @@
   right: 0;
   bottom: 0;
   left: 0;
-  display: block;
+  display: flex;
   padding: 1.9em;
   font-size: 1.6em;
   color: $cl-secondary;
   box-shadow: 0 0 0 0 $cl-secondary inset;
   outline: none;
+  mix-blend-mode: multiply;
+  background-clip: text;
   transition: {
     property: color, box-shadow;
     duration: 400ms;
@@ -130,5 +187,19 @@
   &:focus-within {
     color: $cl-white;
     box-shadow: 0 -5em 0 0 $cl-secondary inset;
+
+    svg path {
+      fill: $cl-white;
+    }
+  }
+
+  svg {
+    width: 1em;
+    height: auto;
+    margin-left: auto;
+
+    path {
+      transition: fill 400ms;
+    }
   }
 }
