--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,11 +1,12 @@
 .header--primary {
   z-index: 10;
-  position: fixed;
-  top: 0;
+  position: sticky;
   left: 0;
   right: 0;
-  width: 100%;
+  top: 0;
   margin-top: 3rem;
+  width: 100%;
+  height: 9rem;
   font-size: 1.6rem;
   padding: 2rem 0;
 }
