--- a/src/scss/components/_clone.scss
+++ b/src/scss/components/_clone.scss
@@ -12,7 +12,10 @@
   }
 
   .member {
+    opacity: 1;
+    transform: scale(1);
     transition-timing-function: cubic-bezier(0.3, 0.27, 0.07, -.8);
     transition-duration: 700ms;
+    transition-delay: 0ms;
   }
 }
