--- a/src/scss/components/_member.scss
+++ b/src/scss/components/_member.scss
@@ -10,6 +10,7 @@
 }
 
 .member {
+  opacity: 0;
   position: relative;
   overflow: hidden;
   flex-grow: 0;
@@ -25,20 +26,39 @@
   outline: none;
   cursor: pointer;
   user-select: none;
-  transition: transform 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  transform: scale(0);
+  transition: {
+    property: opacity, transform;
+    duration: 500ms, 300ms;
+    delay: 0ms;
+    timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  };
+
+  .section.is-active & {
+    opacity: 1;
+    transform: scale(1);
+  }
 
   .members & {
+
     &:nth-child(1),
     &:nth-child(5) {
       width: 19rem;
       font-size: .57143rem; // 16px
       transition-duration: 500ms;
+      transition-delay: 600ms, 600ms, 600ms;
+      transform: scale(0);
 
-      &:hover,
-      &:focus,
-      &:focus-within {
-        z-index: 2;
-        transform: scale(1.7196);
+      .section.is-active & {
+        transform: scale(1);
+        transition-delay: 600ms, 0ms, 0ms;
+
+        &:hover,
+        &:focus,
+        &:focus-within {
+          z-index: 2;
+          transform: scale(1.7196);
+        }
       }
     }
 
@@ -46,12 +66,19 @@
     &:nth-child(4) {
       width: 25.5rem;
       font-size: .75rem;
+      transition-duration: 500ms;
+      transition-delay: 300ms, 0ms, 0ms;
+      transform: scale(0);
 
-      &:hover,
-      &:focus,
-      &:focus-within {
-        z-index: 2;
-        transform: scale(1.34299);
+      .section.is-active & {
+        transform: scale(1);
+
+        &:hover,
+        &:focus,
+        &:focus-within {
+          z-index: 2;
+          transform: scale(1.34299);
+        }
       }
     }
   }
@@ -94,7 +121,7 @@
     right: 0;
     width: 80%;
     height: 100%;
-    background: url('images/add-to-team.svg') no-repeat calc(100% - 2em) 2em/12em;
+    background: url('images/add-to-team.svg') no-repeat calc(100% - 2em) 2em/12.4em;
     transition: opacity 300ms;
   }
 
