--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -41,11 +41,14 @@
 }
 
 .banner__heading {
-  color: $cl-white;
-  font-size: 8rem;
 
   @include media($screen-md) {
-    max-width: 60%;
+    max-width: 80%;
+  }
+
+  img {
+    display: block;
+    width: 100%;
   }
 }
 
