--- a/src/scss/components/_clone.scss
+++ b/src/scss/components/_clone.scss
@@ -8,13 +8,13 @@
   transition: {
     property: transform;
     duration: 700ms;
-    timing-function: cubic-bezier(0.02, 0.01, 0.21, 1);
+    timing-function: cubic-bezier(0.445, 0.050, 0.550, 0.950);
   }
 
   .member {
     opacity: 1;
     transform: scale(1);
-    transition-timing-function: cubic-bezier(0.3, 0.27, 0.07, -.8);
+    transition-timing-function: cubic-bezier(0.850, -0.210, 0.640, 0.940);
     transition-duration: 700ms;
     transition-delay: 0ms;
   }
