--- a/src/scss/components/_member.scss
+++ b/src/scss/components/_member.scss
@@ -1,7 +1,6 @@
 .members {
   display: flex;
   align-items: center;
-  justify-content: center;
   overflow-x: auto;
   max-width: 100%;
   margin: 0;
@@ -16,7 +15,7 @@
   flex-grow: 0;
   flex-shrink: 0;
   width: 33.6rem;
-  margin: 0 1.5rem;
+  margin-right: 3rem;
   padding: 7em 3em 9em;
   font-size: 1rem;
   list-style: none;
@@ -41,6 +40,14 @@
 
   .members & {
 
+    &:nth-child(1) {
+      margin-left: auto;
+    }
+
+    &:nth-child(5) {
+      margin-right: auto;
+    }
+
     &:nth-child(1),
     &:nth-child(5) {
       width: 19rem;
@@ -57,7 +64,7 @@
         &:focus,
         &:focus-within {
           z-index: 2;
-          transform: scale(1.7196);
+          transform: scale(1.765);
         }
       }
     }
