feat(cart): Allow empty cart placeholder to contain multiple lines of text.

--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -174,7 +174,7 @@ $cart-margin: .5em;
   &--placeholder {
     flex-direction: column;
     box-shadow: none;
-    white-space: nowrap;
+    text-align: center;
 
     &::before {
       content: '';
