--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@
 @import 'base/typography';
 
 @import 'components/clone';
+@import 'components/input';
 @import 'components/header';
 @import 'components/footer';
 @import 'components/button';
