--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -6,9 +6,9 @@
   top: 0;
   margin-top: 3rem;
   width: 100%;
-  height: 9rem;
+  height: 7rem;
   font-size: 1.6rem;
-  padding: 2rem 0;
+  padding: 1rem 0;
 
   &::before {
     content: '';
@@ -19,6 +19,7 @@
     width: 100%;
     height: 100%;
     background-image: linear-gradient(168deg, #4735E2 40%, #3D3398 100%);
+    box-shadow: 0 0.2rem 2rem 0 rgba(0, 0, 0, .2);
     opacity: 0;
     transition: {
       property: opacity;
@@ -27,8 +28,9 @@
   }
 
   &[data-is-sticky='true'] {
+
     &::before {
-      opacity: 1;
+      opacity: .95;
     }
   }
 }
