--- a/src/scss/components/_member.scss
+++ b/src/scss/components/_member.scss
@@ -181,10 +181,31 @@
 .member__name {
   color: $cl-primary;
   font: {
+    family: $font-body;
     size: 2.8em;
     weight: 900;
   };
-  margin-bottom: 1em;
+  margin-bottom: .714285714em; // 20px
+}
+
+.member__title {
+  margin: 0;
+  color: $cl-primary;
+  font: {
+    family: $font-body;
+    size: 1.8em;
+    weight: 700;
+  }
+}
+
+.member__tags {
+  margin: 0 0 1.875em; // 30px
+  color: $cl-quinary;
+  font: {
+    family: $font-body;
+    size: 1.6em;
+    weight: 500;
+  }
 }
 
 .member__description {
