fix(member): Replace selected member svg with png.

--- a/src/scss/components/_member.scss
+++ b/src/scss/components/_member.scss
@@ -158,7 +158,7 @@
 
     &:before {
       opacity: 1;
-      background: url('images/selected-member.svg') no-repeat calc(100% - 2em) 2em/13em;
+      background: url('images/selected-member.png') no-repeat calc(100% - 2em) 2em/13em;
     }
 
     &:after {
