--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -8,26 +8,51 @@
   color: $cl-white;
   background-image: linear-gradient(168deg, #4735E2 40%, #3D3398 100%);
 
+  &:before {
+    content: '';
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: {
+      repeat: no-repeat;
+      size: auto 100%;
+      position: center;
+      image: url('images/banner-mask.svg');
+    };
+  }
+
   &:after {
     content: '';
     z-index: 1;
     position: absolute;
     top: 0;
     left: 0;
+    opacity: 0;
     display: block;
     width: 100%;
     height: 100%;
     background: {
       repeat: no-repeat;
       size: cover;
-      position: center calc(100% + .2rem);
-      image: url('images/banner.svg');
+      position: top center;
+      image: url('images/banner-top.svg');
     };
+    transition: opacity 800ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+
+  &.is-active {
+
+    &:after {
+      opacity: 1;
+    }
   }
 }
 
 .banner__container {
-  z-index: 2;
+  z-index: 3;
   position: relative;
   width: 100%;
   margin: 0 auto;
@@ -41,9 +66,15 @@
 }
 
 .banner__heading {
+  opacity: 0;
+  transition: opacity 800ms cubic-bezier(0.215, 0.61, 0.355, 1) 300ms;
 
   @include media($screen-md) {
     max-width: 80%;
+  }
+
+  .banner.is-active & {
+    opacity: 1;
   }
 
   img {
@@ -53,14 +84,20 @@
 }
 
 .banner__content {
+  opacity: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   line-height: 1.55;
+  transition: opacity 800ms cubic-bezier(0.215, 0.61, 0.355, 1) 600ms;
 
   @include media($screen-md) {
     max-width: 60%;
     align-items: flex-start;
+  }
+
+  .banner.is-active & {
+    opacity: 1;
   }
 
   .button {
