--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import 'base/variables';
 @import 'base/defaults';
 @import 'base/typography';
+@import 'base/animations';
 
 @import 'components/clone';
 @import 'components/input';
